tools/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: default
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: ghcr.io/konstfish/alex-demo:latest
          ports:
            - containerPort: 8080
              hostPort: 8080
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
---
#apiVersion: v1
#kind: Service
#metadata:
#  name: nginx
#  namespace: default
#  annotations:
#    metallb.io/loadBalancerIPs: 10.0.1.130
#spec:
#  ports:
#    - port: 80
#      targetPort: 8080
#  selector:
#    app: nginx
#  type: LoadBalancer
