tools/nvidia-demo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nvidia-demo
  namespace: default
spec:
  runtimeClassName: nvidia
  restartPolicy: Never
  containers:
    - name: cuda-vectoradd
      image: nvcr.io/nvidia/k8s/cuda-sample:vectoradd-cuda12.5.0
      resources:
        limits:
          nvidia.com/gpu: 1
