tools/pvc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: alpine-pvc
  labels:
    app: alpine-pvc
spec:
  containers:
  - name: alpine-container
    image: alpine:latest
    command: ["/bin/sh"]
    args: ["-c", "while true; do sleep 3600; done"]
    volumeMounts:
    - name: test-storage
      mountPath: /data
    resources:
      requests:
        memory: "64Mi"
        cpu: "100m"
      limits:
        memory: "128Mi"
        cpu: "200m"
  volumes:
  - name: test-storage
    persistentVolumeClaim:
      claimName: testpvc2
  restartPolicy: Always
