tools/rwx.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: alpine-pod-1
  labels:
    app: alpine-pod-1
spec:
  containers:
    - name: alpine
      image: alpine:latest
      command: ["sleep", "30000"]
      volumeMounts:
        - name: shared-volume
          mountPath: /shared
  volumes:
    - name: shared-volume
      persistentVolumeClaim:
        claimName: shared-storage
---
apiVersion: v1
kind: Pod
metadata:
  name: alpine-pod-2
  labels:
    app: alpine-pod-2
spec:
  affinity:
    podAntiAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
      - labelSelector:
          matchExpressions:
          - key: app
            operator: In
            values:
            - alpine-pod-1  # This will avoid nodes with alpine-pod-1 pods
        topologyKey: kubernetes.io/hostname
  containers:
    - name: alpine
      image: alpine:latest
      command: ["sleep", "30000"]
      volumeMounts:
        - name: shared-volume
          mountPath: /shared
  volumes:
    - name: shared-volume
      persistentVolumeClaim:
        claimName: shared-storage
