tools/test-whereabouts.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-whereabouts
  annotations:
    k8s.v1.cni.cncf.io/networks: kube-system/bridge-conf
spec:
  containers:
  - name: test
    image: busybox
    command: ["sleep", "3600"]
