tools/fedora-vm.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: fedora-vm
spec:
  ports:
  - port: 27017
    protocol: TCP
    targetPort: 22
  selector:
    kubevirt.io/vm: fedora-vm
  type: LoadBalancer
  externalTrafficPolicy: Local
