tools/nginx-istio.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-test
  #labels:
  #  istio-injection: enabled
  #  pod-security.kubernetes.io/enforce: privileged
  #annotations:
  #  pod-security.kubernetes.io/enforce-policy: "baseline"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: istio-test
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: ghcr.io/konstfish/alex-demo:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
 name: nginx
 namespace: istio-test
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: nginx
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: testroute
  namespace: istio-test
spec:
  parentRefs:
  - name: http-gateway
    namespace: istio-ingress
    sectionName: https
  hostnames:
  - "demotest.net.konst.fish"
  rules:
  - backendRefs:
    - name: nginx
      port: 80
